fix spacing when adding questions and create controller function to handle question editing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -343,7 +343,7 @@ body{
 .set-resp-type-btn {
   float: left;
   display: block;
-  margin-left: 100px;
+  margin-left: 25%;
   margin-top: 0px;
   height: 100%;
   }
